fix: исправлены все стилистические или потенциальные ошибки найденные линтером